--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.border-gradient {
+  background-image: linear-gradient(#27292d, #27292d),
+    linear-gradient(129.59deg, #969696 0%, #343434 98.18%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  padding: 2px;
+}
